Add hyperlink to ertwensoep.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href="./recipes/erwtensoep.html">Ertwensoep</a></p>
     </body>
 </html>
