Add link to potatopuffpie and tomatorisotto html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/erwtensoep.html">Ertwensoep</a></p>
+        <p><ul>
+            <li><a href="./recipes/erwtensoep.html">Ertwensoep</a></li>
+            <li><a href="./recipes/tomatorisotto.html">Easy tinned Tomato Risotto</a></li>
+            <li><a href="./recipes/potatopuffpie.html">Easy Cheesy Potato Puff Pie</a></li>
+            </ul></p>
     </body>
 </html>
