Add links to index.html to make loop

--- a/recipes/potatopuffpie.html
+++ b/recipes/potatopuffpie.html
@@ -8,21 +8,21 @@
 
     <body>
         <h1>Easy Cheesy Potato Puff Pie</h1>
-        <img src="../images/potatopuffpiefinal.jpg" width="400" alt="delicious erwtensoep">
+        <img src="../images/potatopuffpiefinal.jpg" width="400" alt="delicious easy cheesy Potato Puff Pie">
         <p><h2>Description</h3></p>
         <p>All the flavours of leek and potato soup but with added cheese and pastry!</p>
         <nobr>This leek, potato and cheese puff pie is the perfect budget winter warm</nobr>
         <p><h3>Ingredients</h5>
             <ul>
-                <li>1kg/2lb 4oz potatoes, peeled, cut into cubes and boiled</li>
+                <li>1kg/ 2lb 4oz potatoes, peeled, cut into cubes and boiled</li>
                 <li>1 large leek, very thinly sliced</li>
-                <li>150g/5½oz mature cheddar, grated</li>
+                <li>150g/ 5½oz mature cheddar, grated</li>
                 <li>1 tsp dried mixed herbs</li>
-                <li>150ml/5fl oz full-fat milk, plus 1 tbsp for brushing</li>
-                <li>100g/3½oz cream cheese</li>
-                <li>320g/11½oz puff pastry sheet</li>
-                <li>salt and freshly ground black pepper</li>
-                <li> freshly cooked frozen peas, to serve</li>
+                <li>150ml/ 5fl oz full-fat milk, plus 1 tbsp for brushing</li>
+                <li>100g/ 3.5oz cream cheese</li>
+                <li>320g/11.5oz puff pastry sheet</li>
+                <li>Salt and freshly ground black pepper</li>
+                <li>Freshly cooked frozen peas, to serve</li>
             </ul></p>
          <p><h3>Steps</h5>
             <ol>
@@ -32,5 +32,6 @@
                 <li>Brush the top with milk and make a couple of slits in the pastry so the steam can escape.</li>
                 <li>Bake for 30 minutes until puffed up and golden brown. Serve with the peas.</li>
             </ol></p>
+        <p><a href="../index.html">Homepage</a></p>
     </body>
 </html>
