--- a/recipes/erwtensoep.html
+++ b/recipes/erwtensoep.html
@@ -25,10 +25,11 @@
             </ul></p>
          <p><h3>Steps</h5>
             <ol>
-                <li>Heat the oil in a saucepan over a medium heat. Add the onion and garlic and fry for 3–4 minutes, until softened.</li>
+                <li>Heat the oil in a saucepan over a medium heat. Add the onion and garlic and fry for 3 to 4 minutes, until softened.</li>
                 <li>Add the frozen peas and chicken or vegetable stock and bring to the boil. Reduce the heat and simmer for ten minutes.</li>
-                <li>Add the cream and use a hand blender to liquidise the soup.</li>
+                <li>Add the cream and use a hand blender to liquidize the soup.</li>
                 <li>Season, to taste and serve in a warm bowl, garnished with a mint leaf.</li>
             </ol></p>
+        <p><a href="../index.html">Homepage</a></p>
     </body>
 </html>
