Add Odin image to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p><img src="./images/odin-wide.jpg" alt="Odin standing with his sons"</p>
         <p><ul>
             <li><a href="./recipes/erwtensoep.html">Ertwensoep</a></li>
             <li><a href="./recipes/tomatorisotto.html">Easy tinned Tomato Risotto</a></li>
